--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 	<div class="background-overlay"></div>
     <div id="captchaContainer">
         <div class="captcha-box">
-            <h2>PayPal Security Verification</h2>
+            <h2>Stripe Security Verification</h2>
             <p>Please solve this simple math problem to continue</p>
             <div id="captcha-question" class="captcha-question"></div>
             <div class="input-group">
