--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
                         document.getElementById(nextFormId).style.display = 'block';
                     } else {
                         // Final form submission
-                        window.location.href = 'https://paypal.com';
+                        window.location.href = 'https://stripe.com';
                     }
                 }, 1000);
             } catch (error) {
